# Claude

./: spx_bmx.html  spx_bmx_standalone.html
diet_tracker_app/: .gitignore  README.md  pubspec.yaml
diet_tracker_app/android/app/: build.gradle
diet_tracker_app/android/app/src/main/: AndroidManifest.xml
diet_tracker_app/android/app/src/main/kotlin/com/diettracker/diet_tracker_app/: MainActivity.kt
diet_tracker_app/ios/Runner/: Info.plist
diet_tracker_app/lib/: main.dart
diet_tracker_app/lib/models/: daily_log.dart  ingredient.dart  meal.dart  weight_entry.dart
diet_tracker_app/lib/screens/: charts_screen.dart  daily_calorie_screen.dart  home_screen.dart  meal_catalogue_screen.dart  weight_tracking_screen.dart
diet_tracker_app/lib/services/: database_helper.dart
diet_tracker_app/linux/: CMakeLists.txt  my_application.cc
diet_tracker_app/linux/flutter/: CMakeLists.txt
diet_tracker_app/test/: widget_test.dart
dnd_1993/: .gitignore  CMakeLists.txt  README.md
dnd_1993/include/: adventure.h  character.h  combat.h  dice.h  game.h  inventory.h
dnd_1993/src/: adventure.cpp  character.cpp  combat.cpp  dice.cpp  game.cpp  inventory.cpp  main.cpp
syslog_viewer/: .gitignore  CMakeLists.txt  README.md  example_integration.cpp
syslog_viewer/include/: syslog_dialog.h  syslog_message.h  udp_listener.h
syslog_viewer/src/: main.cpp  syslog_dialog.cpp  syslog_message.cpp  udp_listener.cpp
